chore: connect frontend to backend to get release definitions for project

--- a/ado-dashboard-frontend/index.html
+++ b/ado-dashboard-frontend/index.html
@@ -1,25 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="Description" content="Put your description here.">
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <base href="/" />
 
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background-color: #ededed;
-    }
-  </style>
-  <title>ado-dashboard-frontend</title>
-</head>
-<body>
-  <ado-dashboard-frontend title="Hello owc world!"></ado-dashboard-frontend>
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+        background-color: #ededed;
+      }
+    </style>
+    <title>ADO Dashboard</title>
+  </head>
+  <body>
+    <ado-dashboard></ado-dashboard>
 
-  <script type="module" src="./components/ado-dashboard-frontend/ado-dashboard-frontend.js"></script>
-</body>
-
+    <script type="module" src="./components/dashboard/ado-dashboard.js"></script>
+  </body>
 </html>
