chore: show release & build definitions on dashboard

--- a/ado-dashboard-frontend/index.html
+++ b/ado-dashboard-frontend/index.html
@@ -11,7 +11,8 @@
         margin: 0;
         padding: 0;
         font-family: sans-serif;
-        background-color: #ededed;
+        background-color: #252423;
+        color: #d0cfcf;
       }
     </style>
     <title>ADO Dashboard</title>
@@ -19,6 +20,6 @@
   <body>
     <ado-dashboard></ado-dashboard>
 
-    <script type="module" src="./components/dashboard/ado-dashboard.js"></script>
+    <script type="module" src="./src/dashboard.js"></script>
   </body>
 </html>
