--- a/ado-dashboard-frontend/index.html
+++ b/ado-dashboard-frontend/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <base href="/" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Source+Code+Pro&display=swap" rel="stylesheet">
 
     <style>
       html,
       body {
         margin: 0;
         padding: 0;
-        font-family: sans-serif;
+        font-family: 'Roboto', sans-serif;
         background-color: #252423;
         color: #d0cfcf;
       }
