--- a/ado-dashboard-frontend/index.html
+++ b/ado-dashboard-frontend/index.html
@@ -4,15 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <base href="/" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Source+Code+Pro&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:400,700&display=swap"
+      rel="stylesheet"
+    />
 
     <style>
       html,
       body {
         margin: 0;
         padding: 0;
-        font-family: 'Roboto', sans-serif;
-        background-color: #252423;
+        font-family: 'Nunito', sans-serif;
+        background-color: #22282d;
         color: #d0cfcf;
       }
     </style>
